Fixed layout bug

--- a/css/base.css
+++ b/css/base.css
@@ -182,7 +182,6 @@ body {
   --color-info: #272526;
   --grid-item-bg: #181818;
   --color-close: #ec1752;
-  font-family: Futura, "futura-pt", sans-serif;
   min-height: 100vh;
   color: #57585c;
   color: var(--color-text);
@@ -257,8 +256,6 @@ a:focus {
 
 main {
   position: relative;
-  height: fit-content;
-  overflow: hidden;
 }
 
 .frame {
@@ -321,7 +318,7 @@ main {
   line-height: 1.5;
 }
 
-.mail-icon {
+.contact-link {
   display: inline-block;
   margin-left: 1vw;
 }
@@ -330,8 +327,7 @@ main {
   position: relative;
   max-width: 1100px;
   margin: 0 auto;
-  padding-top: 6rem;
-  transform: translateX(-3.33vw);
+  padding: 6rem 1rem 0;
 }
 
 .grid-wrap--hidden {
@@ -350,7 +346,7 @@ main {
 }
 
 .grid__item {
-  width: 300px;
+  width: 280px;
   position: relative;
   padding: 2.75rem;
   margin-bottom: 5rem;
@@ -423,12 +419,12 @@ main {
   top: 0;
   width: 100%;
   z-index: 1000;
-  height: max-content;
-  overflow: hidden;
+  /*height: max-content;
+  overflow: hidden;*/
 }
 
 .content__item {
-  padding: 10rem 5vw 0;
+  padding: 10rem 5vw 5rem;
   grid-area: 1 / 1 / 1 / 1;
 }
 
@@ -443,7 +439,7 @@ main {
 .js .content__item--current {
   height: auto;
   opacity: 1;
-  padding: 3.66rem 5vw 0;
+  padding: 3.66rem 5vw 5rem;
   pointer-events: auto;
 }
 
@@ -542,23 +538,29 @@ main {
   opacity: 0;
 }
 
-.a-about {
+.about-wrap {
   position: relative;
   text-align: center;
-  margin-top: 5.33vw;
-  padding-bottom: 33.33vw;
+  margin-top: 3.33vw;
+  padding-bottom: 18.33vw;
   height: fit-content;
   overflow: hidden;
 }
 
-.tilted-bg {
+.about-wrap--hidden {
+  height: 0;
+  overflow: hidden;
+}
+
+.about-wrap::after {
+  content: "";
   position: absolute;
-  top: 23.33vw;
-  right: 2.33vw;
+  top: 8.33vw;
+  right: 0;
   width: 200%;
   height: 200%;
   background-color: var(--grid-item-bg);
-  transform: rotate(-20deg);
+  transform: rotate(-15deg);
   transform-origin: top right;
   z-index: -1;
 }
@@ -632,12 +634,6 @@ main {
   .title__sub-works {
     display: block;
   }
-  .grid-wrap {
-    transform: translateX(0);
-  }
-  .grid__item {
-    width: 260px;
-  }
   .grid__item-number {
     right: -2.45rem;
   }
@@ -674,14 +670,5 @@ main {
   .contact__form-item {
     min-width: unset;
     max-width: 30vw;
-  }
-}
-
-@keyframes float {
-  from {
-    transform: translateY(0);
-  }
-  to {
-    transform: translateY(10px);
   }
 }
